tests/fixtures/invalid/round_bytes_bytes.py
# Cannot call round() with Bytes, Bytes
x = round(b"hello", b"hello")
